Updated to reflect config.json

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 .vscode/
 settings.json
 
+# Config for project
+lore/config.json
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
