--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ Flask-Migrate = "*"
 python-dotenv = "*"
 Flask-JWT-Extended = "*"
 Pillow = "*"
+flask-moment = "*"
 
 [dev-packages]
 pylint = "*"
